# nlp

./: .gitignore  main.py  pyproject.toml
backend/: pyproject.toml
backend/src/: agents.py  config.py  main.py  tools.py
frontend/: package.json
frontend/src/routes/: +page.svelte  layout.css
