[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "openai>=2.13.0",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "wordcloud>=1.9.4",
]
